--- a/view/home.html
+++ b/view/home.html
@@ -2,5 +2,7 @@
 <head></head>
 <body>
 	<h1>Home</h1>
+	<template>PageCookie</template>
+	<button onclick="SavePage()">Save Page to cookie</button>
 </body>
 </html>
