--- a/view/searchresult.html
+++ b/view/searchresult.html
@@ -1,6 +1,9 @@
 <html>
-<head></head>
-<body>
+<head>
+	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/tshirts.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/general.css">
+</head>
+<body class="dark">
 	<template>main_view_tshirts</template>
 </body>
 </html>
