--- a/view/viewtshirts.html
+++ b/view/viewtshirts.html
@@ -1,8 +1,11 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/tshirts.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/search.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/general.css">
 </head>
-<body>
+<body class="dark">
+	<template>search_bar</template>
 	<template>main_view_tshirts</template>
 </body>
 </html>
