--- a/resources/css/search.css
+++ b/resources/css/search.css
@@ -31,7 +31,7 @@ input[type=submit], input[type=submit]:hover {
 }
 
 .searchbar {
-	width:95%;
+	width:100%;
 	/* height:50px; */
 	/* padding:40px 25px; */
 	vertical-align: center;
@@ -42,6 +42,7 @@ input[type=submit], input[type=submit]:hover {
 	border:1px solid #2a2e31;
 	background-color:#2d3035;
 	color:#505358;
+	min-width: 70%;
 }
 
 .searchoptions{
@@ -59,8 +60,12 @@ input[type=submit], input[type=submit]:hover {
 	height: 20%;
 }
 
-.smallersearchoptions{
-	height: 44%;
+div.smallersearchoptions{
+	height: 19%;
+}
+
+.smallersearchoptions fieldset{
+	height: 45%;
 }
 
 .hiddensearch{
@@ -75,4 +80,8 @@ input[type=submit], input[type=submit]:hover {
 
 .showsearch{
 	display: inline;
+}
+
+.pos_vert_bottom{
+	vertical-align: bottom;
 }
