--- a/view/viewtshirts.html
+++ b/view/viewtshirts.html
@@ -1,11 +1,16 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/tshirts.css">
-	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/search.css">
-	<link rel="stylesheet" type="text/css" href="http://localhost:8081/css/general.css">
+	<link rel="stylesheet" type="text/css" href="/css/tshirts.css">
+	<link rel="stylesheet" type="text/css" href="/css/search.css">
+	<link rel="stylesheet" type="text/css" href="/css/general.css">
+	<link rel="stylesheet" type="text/css" href="/css/vertical_menu.css">
 </head>
 <body class="dark">
-	<template>search_bar</template>
-	<template>main_view_tshirts</template>
+	<template>vertical_menu</template>
+	<div id="main_space"> </div>
+	<div id="main_content">
+		<template>search_bar</template>
+		<template>main_view_tshirts</template>
+	</div>
 </body>
 </html>
