add extended tshirtview

--- a/view/viewtshirt.html
+++ b/view/viewtshirt.html
@@ -1,6 +1,11 @@
 <html>
-<head></head>
-<body>
-	<template>main_view_tshirt</template>
+<head>
+	<link rel="stylesheet" type="text/css" href="/css/general.css">
+	<link rel="stylesheet" type="text/css" href="/css/vertical_menu.css">
+</head>
+<body class="dark">
+	<template>vertical_menu</template>
+	<div id="main_space"> </div>
+	<div id="main_content"><template>main_view_tshirt</template></div>
 </body>
 </html>
