--- a/view/viewtshirt.html
+++ b/view/viewtshirt.html
@@ -2,6 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/css/general.css">
 	<link rel="stylesheet" type="text/css" href="/css/vertical_menu.css">
+	<link rel="stylesheet" type="text/css" href="/css/tshirt.css">
 </head>
 <body class="dark">
 	<template>vertical_menu</template>
