--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -1,3 +1,12 @@
 .dark {
 	background: url('/misc/dark_grey.jpg');
 }
+
+.error{
+	border-style: solid;
+	border-width: 5px;
+	border-color: red;
+	background-color: red;
+	clear: both;
+	width: 60%;
+}
