--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -9,4 +9,10 @@
 	background-color: red;
 	clear: both;
 	width: 60%;
+	position: relative;
+	top: 50px;
+	font-size: 18pt;
+	color: white;
+	font-weight: bold;
+	text-align: center;
 }
