--- a/view/404.html
+++ b/view/404.html
@@ -1,6 +1,16 @@
 <html>
-<head></head>
-<body>
-	<h1>404</h1>
+<head>
+	<link rel="stylesheet" type="text/css" href="/css/tshirts.css">
+	<link rel="stylesheet" type="text/css" href="/css/search.css">
+	<link rel="stylesheet" type="text/css" href="/css/general.css">
+	<link rel="stylesheet" type="text/css" href="/css/vertical_menu.css">
+</head>
+<body class="dark">
+	<template>vertical_menu</template>
+	<div id="main_space"> </div>
+	<div id="main_content">
+		<template>search_bar</template>
+		<div class="error">404 Page Not Found</div>
+	</div>
 </body>
 </html>
