--- a/view/orders.html
+++ b/view/orders.html
@@ -11,32 +11,7 @@
 	<div id="main_content">
 		<template>search_bar</template>
 		<div style="clear: both;">
-			<form action="auth" method="post">
-				<table>
-					<tr>
-						<td>
-							Username:
-						</td>
-						<td>
-							<input type="text" name="user" />
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Password:
-						</td>
-						<td>
-							<input type="password" name="password" />
-						</td>
-					</tr>
-					<tr>
-						<td></td>
-						<td>
-							<input type="submit" />
-						</td>
-					</tr>
-				</table>
-			</form>
+			<template>main_view_orders</template>
 		</div>
 	</div>
 </body>
